Starting point for ui layout

--- a/3 - Apple Watch/2.b. Storyboarding the UI/MyAppleWatchApp WatchKit App/Base.lproj/Interface.storyboard
+++ b/3 - Apple Watch/2.b. Storyboarding the UI/MyAppleWatchApp WatchKit App/Base.lproj/Interface.storyboard
@@ -36,4 +36,5 @@
             <point key="canvasLocation" x="468" y="643"/>
         </scene>
     </scenes>
+    <color key="tintColor" red="0.55294120311737061" green="0.80000001192092896" blue="0.28627452254295349" alpha="1" colorSpace="calibratedRGB"/>
 </document>
