--- a/3 - Apple Watch/2.b. Storyboarding the UI/MyAppleWatchApp WatchKit App/Base.lproj/Interface.storyboard
+++ b/3 - Apple Watch/2.b. Storyboarding the UI/MyAppleWatchApp WatchKit App/Base.lproj/Interface.storyboard
@@ -5,12 +5,23 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="3737"/>
     </dependencies>
     <scenes>
-        <!--Interface Controller-->
+        <!--Finn-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="MyAppleWatchApp_WatchKit_App" customModuleProvider="target"/>
+                <controller title="Finn" id="AgC-eL-Hgc" customClass="InterfaceController" customModule="MyAppleWatchApp_WatchKit_App" customModuleProvider="target">
+                    <items>
+                        <group width="1" height="1" alignment="left" backgroundImage="ExampleDevice" contentMode="scaleAspectFit" id="sBl-Ez-mK9">
+                            <items>
+                                <label alignment="right" verticalAlignment="bottom" text="00:00" id="rYV-7l-mcY"/>
+                            </items>
+                        </group>
+                    </items>
+                    <connections>
+                        <segue destination="9w9-Rr-gWa" kind="relationship" relationship="nextPage" id="LYz-Dn-n7Z"/>
+                    </connections>
+                </controller>
             </objects>
-            <point key="canvasLocation" x="468" y="380"/>
+            <point key="canvasLocation" x="185" y="378"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
@@ -34,6 +45,39 @@
                 <controller id="4sK-HA-Art" customClass="NotificationController" customModule="MyAppleWatchApp_WatchKit_App" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="468" y="643"/>
+        </scene>
+        <!--Finn-->
+        <scene sceneID="dnv-Ri-RPf">
+            <objects>
+                <controller title="Finn" id="9w9-Rr-gWa" customClass="InterfaceController" customModule="MyAppleWatchApp_WatchKit_App" customModuleProvider="target">
+                    <items>
+                        <group width="1" height="1" alignment="left" backgroundImage="ExampleDevice" contentMode="scaleAspectFit" id="uAT-b1-W6X">
+                            <items>
+                                <label alignment="right" verticalAlignment="bottom" text="00:00" id="sAG-Sg-UnD"/>
+                            </items>
+                        </group>
+                    </items>
+                    <connections>
+                        <segue destination="LQH-Pk-Qf8" kind="relationship" relationship="nextPage" id="pJG-0H-q9d"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="358" y="378"/>
+        </scene>
+        <!--Finn-->
+        <scene sceneID="6u2-Gf-Gil">
+            <objects>
+                <controller title="Finn" id="LQH-Pk-Qf8" customClass="InterfaceController" customModule="MyAppleWatchApp_WatchKit_App" customModuleProvider="target">
+                    <items>
+                        <group width="1" height="1" alignment="left" backgroundImage="ExampleDevice" contentMode="scaleAspectFit" id="bNo-wK-gs6">
+                            <items>
+                                <label alignment="right" verticalAlignment="bottom" text="00:00" id="5YE-Fx-WMY"/>
+                            </items>
+                        </group>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="528" y="378"/>
         </scene>
     </scenes>
     <color key="tintColor" red="0.55294120311737061" green="0.80000001192092896" blue="0.28627452254295349" alpha="1" colorSpace="calibratedRGB"/>
